added preferences screen with color scheme selector

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,19 +2,7 @@
 <resources>
     <string-array
         name="color_schemes">
-        <item>red</item>
-        <item>blue</item>
-        <item>green</item>
-    </string-array>
-    <string-array
-        name="array1">
-        <item>red</item>
-        <item>blue</item>
-        <item>green</item>
-    </string-array>
-    <string-array
-        name="array2">
-        <item>red</item>
+        <item>red(default)</item>
         <item>blue</item>
         <item>green</item>
     </string-array>
