--- a/app/src/main/res/layout/activity_radar.xml
+++ b/app/src/main/res/layout/activity_radar.xml
@@ -22,38 +22,40 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/te"
-        android:layout_width="368dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_width="384dp"
+        android:layout_height="52dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/radarwatch"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="@+id/te"
+            app:layout_constraintStart_toStartOf="@+id/te"
+            app:layout_constraintTop_toTopOf="@+id/te" />
+
+    </android.support.v7.widget.Toolbar>
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:onClick="settingsButtonClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_preferences"
         tools:layout_editor_absoluteY="0dp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/radarwatch"
-        app:layout_constraintBottom_toBottomOf="@+id/te"
-        app:layout_constraintStart_toStartOf="@+id/te"
-        app:layout_constraintTop_toTopOf="@+id/te" />
+
 
 
 </android.support.constraint.ConstraintLayout>
