--- a/app/src/main/res/layout/digital_clock.xml
+++ b/app/src/main/res/layout/digital_clock.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RadarActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
-    <com.example.vladlen.radarwatch.RadarView
-        android:id="@+id/radarView"
-        android:layout_width="265dp"
-        android:layout_height="282dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"
+    <TextClock
+        android:id="@+id/simpleDigitalClock"
+        android:layout_width="wrap_content"
+        android:layout_height="258dp"
+        android:layout_centerHorizontal="true"
+        android:format24Hour="hh:mm:ss"
         android:onClick="toggleDigitalClock"
+        android:padding="20dp"
+        android:textSize="80sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.414" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/te"
@@ -54,9 +54,7 @@
         android:onClick="settingsButtonClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_preferences"
-        tools:layout_editor_absoluteY="0dp" />
-
-
-
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
