--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -8,8 +8,8 @@
     android:background="@color/white">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/te"
-        android:layout_width="384dp"
+        android:id="@+id/te_settings"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
@@ -26,9 +26,9 @@
             android:layout_marginTop="8dp"
             android:text="@string/preferences"
             android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="@+id/te"
-            app:layout_constraintStart_toStartOf="@+id/te"
-            app:layout_constraintTop_toTopOf="@+id/te" />
+            app:layout_constraintBottom_toBottomOf="@+id/te_settings"
+            app:layout_constraintStart_toStartOf="@+id/te_settings"
+            app:layout_constraintTop_toTopOf="@+id/te_settings" />
 
     </android.support.v7.widget.Toolbar>
 
@@ -46,7 +46,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/te" />
+        app:layout_constraintTop_toBottomOf="@+id/te_settings" />
 
     <TextView
         android:id="@+id/textView2"
@@ -59,7 +59,7 @@
         app:layout_constraintEnd_toStartOf="@+id/spinner2"
         app:layout_constraintHorizontal_bias="0.864"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/te"
+        app:layout_constraintTop_toBottomOf="@+id/te_settings"
         app:layout_constraintVertical_bias="1.0" />
 
 
