--- a/app/src/main/res/layout/digital_clock.xml
+++ b/app/src/main/res/layout/digital_clock.xml
@@ -55,7 +55,7 @@
         android:layout_marginEnd="8dp"
         android:onClick="settingsButtonClick"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_preferences"
+        app:srcCompat="@drawable"
         tools:layout_editor_absoluteY="0dp"
         tools:ignore="MissingConstraints" />
 
