--- a/app/src/main/res/layout/digital_clock.xml
+++ b/app/src/main/res/layout/digital_clock.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clock_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/clock_view"
-    android:onClick="toggleDigitalClock"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:onClick="toggleDigitalClock">
 
-
-    <TextClock
-        android:id="@+id/simpleDigitalClock"
-        android:layout_width="wrap_content"
-        android:layout_height="258dp"
-        android:layout_centerHorizontal="true"
-        android:format24Hour="hh:mm:ss"
-        android:onClick="toggleDigitalClock"
-        android:padding="20dp"
+    <com.example.vladlen.radarwatch.DigitalClockView
+        android:id="@+id/text_clock"
+        android:layout_width = "match_parent"
+        android:layout_height="178dp"
+        android:text="TextView"
         android:textSize="80sp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <!--<TextClock-->
+    <!--android:id="@+id/simpleDigitalClock"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="258dp"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:format24Hour="hh:mm:ss"-->
+    <!--android:onClick="toggleDigitalClock"-->
+    <!--android:padding="20dp"-->
+    <!--android:textSize="80sp"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintHorizontal_bias="0.5"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/te_clock"
@@ -57,7 +70,8 @@
         android:onClick="settingsButtonClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_settings"
-        tools:layout_editor_absoluteY="0dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="0dp" />
+
 
 </android.support.constraint.ConstraintLayout>
